@@ -17,7 +17,16 @@ port = 3128
 ;   Overrides listen definition above and binds to all interfaces
 gateway = 0
 
+; Allow only local interfaces to use proxy. 0 or 1, default: 0
+;   Px allows all IP addresses assigned to local interfaces to use the service.
+;   This allows local apps as well as VM or container apps to use Px when in a
+;   NAT config. Px does this by listening on all interfaces and overriding the
+;   allow list.
+hostonly = 0
+
 ; Allow connection from following subnets, comma separated - default: *.*.*.*
+;   Whitelist which IPs can use the proxy. --hostonly overrides any definitions
+;   unless --gateway mode is also specified
 ;   127.0.0.1 - specific ip
 ;   192.168.0.* - wildcards
 ;   192.168.0.1-192.168.0.255 - ranges
